feat (locales) add new locales entries

--- a/src/locales/br.json
+++ b/src/locales/br.json
@@ -50,9 +50,9 @@
     "u_gender": "dianav",
     "no_gender": "",
     "characters_places_and_demonym": "Denion, lec'hioù ha gentilioù keltiek",
-  "word_count": "Niver a c'herioù: ",
-  "mot": "Ger",
-  "theme": "Dodenn c'heriadel",
+  "word_count": "Niver a c'herioù",
+  "word": "Ger",
+  "lexical_theme": "Dodenn c'heriadel",
   "period": "Mare",
   "place": "Lec'h",
   "country": "Bro",
@@ -60,7 +60,63 @@
   "previous": "War-gil",
   "page": "pajenn: ",
   "next": "War-raok",
-  "add_name": "Ouzhpennañ un anv",  "literal_meaning": "Meneg levenezel: ",
-  "etymological_form": "Formenn etimologel: "
+  "add_name": "Ouzhpennañ un anv",  
+  "literal_meaning": "Ster lennegel",
+  "etymological_form": "Stumm gerdarzhel",
+  "propose_new_term": "Kinnig un termen nevez",
+  "term": "Termen",
+  "language_of_word": "Yezh ar ger",
+  "phonetic": "Fonetek",
+  "gender": "Reizh",
+  "word_class": "Rummenn yezhadurel",
+  "english_translation": "Troidigezh saoznek",
+  "french_translation": "Troidigezh gallek",
+  "semantic_field": "Sterva",
+  "first_occurrence": "Gwezh kentañ",
+  "reference_book": "Levr dave",
+  "masculine": "Gourel",
+  "feminine": "Benel",
+  "neutral": "Neptu",
+  "unknown": "Dianav",
+  "na": "N/A",
+  "noun": "Anv",  "grammatical_nature": "Doare yezhadurel",
+  "associated_language": "Yezh liammet",
+  "details": "Munudoù",
+  "sources": "Andon",  "title": "Gerdarzh",
+  "home": "Degemer",
+  "game": "C'hoari Gerdarzh",
+  "lexicon": "Geriadur",
+  "entities": "Boudelezh",
+  "profile": "Profil",
+  "contact": "Darempred",
+  "propose_new_proper_noun": "Kinnig un anv divoutin nevez",
+  "entity_name": "Anv an entité",
+  "literal_translation_fr": "Troidigezh lizherennel (Galleg)",
+  "literal_translation_eng": "Troidigezh lizherennel (Saozneg)",
+  "geographical_place": "Lec'h",
+  "places_and_countries": "Lec'hioù ha broioù",
+  "historical_figures": "Tudenn istorel",
+  "mythical_figures": "Tudenn gwengelel",
+  "peoples_and_tribes": "Tudoù ha meuriadoù",
+  "weapons_and_creatures": "Armoù ha boudoù",
+  "first_and_last_names": "Anvioù bihan hag Anvioù Familh",
+  "cultural_area": "Takad sevenadurel",
+  "gaule": "Gallia",
+  "brittany": "Breizh",
+  "wales": "Kembre",
+  "ireland_and_scotland": "Iwerzhon ha Skos",
+  "translation_type": "Dore troidigezh",
+  "masculine_person_name": "Anv un den gourel",
+  "feminine_person_name": "Anv un den benel",
+  "clan_or_tribe_name": "Anv ur c'hlan, pe ur meuriad",
+  "singular_masculine_place_name": "Anv unander gourel ul lec'h",
+  "singular_feminine_place_name": "Anv unander benel ul lec'h",
+  "plural_place_name": "Anv liester ul lec'h",
+  "weapon_or_object_name": "Anv un arm pe un objed",
+  "proto_celtic_radicals": "Gwrizienn kent-keltiek",
+  "approximate_year": "mare",
+  "50_words_at_most": "50 ger d'ar muañ",
+  "image_caption": "Alc'hwez ar skeudenn",
+  "add": "Ouzhpennañ"
   }
   
