--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,7 +51,7 @@
     "no_gender": "",
     "characters_places_and_demonym": "Celtic Characters, Places, and Demonyms",
     "word_count": "Word count: ",
-    "mot": "Word",
+    "word": "Word",
     "theme": "Lexical theme",
     "period": "Period",
     "place": "Place",
@@ -60,6 +60,60 @@
     "previous": "Previous",
     "page": "Page: ",
     "next": "Next",
-    "add_name": "Add a name","literal_meaning": "Literal meaning: ",
-  "etymological_form": "Etymological form"
+    "add_name": "Add a name","literal_meaning": "Literal meaning",
+  "etymological_form": "Etymological form",
+  "propose_new_term": "Propose a new term",
+  "term": "Term",
+  "language_of_word": "Language of the word",
+  "phonetic": "Phonetic",
+  "gender": "Gender",
+  "word_class": "Word class",
+  "english_translation": "English translation",
+  "french_translation": "French translation",
+  "semantic_field": "Semantic field",
+  "first_occurrence": "First occurrence",
+  "reference_book": "Reference book",  "masculine": "Masculine",
+  "feminine": "Feminine",
+  "neutral": "Neutral",
+  "unknown": "Unknown",
+  "na": "N/A",
+  "noun": "Noun",  "grammatical_nature": "Grammatical Nature",
+  "associated_language": "Associated Language",
+  "details": "Details",
+  "sources": "Sources",  "title": "Gerdarzh",
+  "home": "Home",
+  "game": "Gerdarzh Game",
+  "lexicon": "Lexicon",
+  "entities": "Entities",
+  "profile": "Profile",
+  "contact": "Contact",  "propose_new_proper_noun": "Propose a new proper noun",
+  "entity_name": "Entity Name",
+  "literal_translation_fr": "Literal Translation (French)",
+  "literal_translation_eng": "Literal Translation (English)",
+  "geographical_place": "Geographical Place",
+  "lexical_theme": "Lexical Theme",
+  "places_and_countries": "Places and Countries",
+  "historical_figures": "Historical Figures",
+  "mythical_figures": "Mythical Figures",
+  "peoples_and_tribes": "Peoples and Tribes",
+  "weapons_and_creatures": "Weapons and Creatures",
+  "first_and_last_names": "First and Last Names",
+  "cultural_area": "Cultural Area",
+  "gaule": "Gaul",
+  "brittany": "Brittany",
+  "wales": "Wales",
+  "ireland_and_scotland": "Ireland and Scotland",
+  "translation_type": "Translation Type",
+  "masculine_person_name": "Masculine Person's Name",
+  "feminine_person_name": "Feminine Person's Name",
+  "clan_or_tribe_name": "Clan or Tribe Name",
+  "singular_masculine_place_name": "Singular Masculine Place Name",
+  "singular_feminine_place_name": "Singular Feminine Place Name",
+  "plural_place_name": "Plural Place Name",
+  "weapon_or_object_name": "Weapon or Object Name",
+  "proto_celtic_radicals": "Proto-Celtic Radicals",
+  "approximate_year": "Approximate Year Equivalent",
+  "50_words_at_most": "Description (around fifty words max)",
+  "image_caption": "Image Caption (around twenty words max)",
+  "add": "Add"
   }
