--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -50,8 +50,8 @@
     "u_gender": "inconnu",
     "no_gender": "",
     "characters_places_and_demonym": "Personnages, lieux et gentilés celtiques",
-    "word_count": "Nombre de mots: ",
-    "mot": "Mot",
+    "word_count": "Nombre de mots",
+    "word": "Mot",
     "theme": "Thème lexical",
     "period": "Période",
     "place": "Lieu",
@@ -61,7 +61,62 @@
     "page": "Page: ",
     "next": "Suivant",
     "add_name": "Ajouter un nom",
-      "literal_meaning": "Sens littéral: ",
-  "etymological_form": "Forme étymologique: "
+      "literal_meaning": "Sens littéral",
+
+  "etymological_form": "Forme étymologique",
+  "propose_new_term": "Proposer un nouveau terme",
+  "term": "Terme",
+  "language_of_word": "Langue du mot",
+  "phonetic": "Phonétique",
+  "gender": "Genre",
+  "word_class": "Classe du mot",
+  "english_translation": "Traduction en anglais",
+  "french_translation": "Traduction en français",
+  "semantic_field": "Champ sémantique",
+  "first_occurrence": "Première occurrence",
+  "reference_book": "Livre de référence",    "masculine": "Masculin",
+  "feminine": "Féminin",
+  "neutral": "Neutre",
+  "unknown": "Inconnu",
+  "na": "N/A",
+  "noun": "Nom",  "grammatical_nature": "Nature grammaticale",
+  "associated_language": "Langue associée",
+  "details": "Détails",
+  "sources": "Sources",  "title": "Gerdarzh",
+  "home": "Accueil",
+  "game": "Jeu Gerdarzh",
+  "lexicon": "Lexique",
+  "entities": "Entités",
+  "profile": "Profil",
+  "contact": "Contact",  "propose_new_proper_noun": "Proposer un nouveau nom propre",
+  "entity_name": "Nom de l'entité",
+  "literal_translation_fr": "Traduction littérale",
+  "literal_translation_eng": "Traduction littérale anglaise",
+  "geographical_place": "Lieu géographique",
+  "lexical_theme": "Thème lexical",
+  "places_and_countries": "Lieux et Pays",
+  "historical_figures": "Figures Historiques",
+  "mythical_figures": "Figures Mythiques",
+  "peoples_and_tribes": "Peuples et Tribus",
+  "weapons_and_creatures": "Armes et Créatures",
+  "first_and_last_names": "Prénoms et Noms de famille",
+  "cultural_area": "Aire culturelle",
+  "gaule": "Gaules",
+  "brittany": "Bretagne",
+  "wales": "Pays de Galles",
+  "ireland_and_scotland": "Irlande et Écosse",
+  "translation_type": "Type de traduction",
+  "masculine_person_name": "Nom de personne masculin",
+  "feminine_person_name": "Nom de personne féminin",
+  "clan_or_tribe_name": "Nom d'un clan ou d'une tribu",
+  "singular_masculine_place_name": "Nom singulier masculin d'un lieu",
+  "singular_feminine_place_name": "Nom singulier féminin d'un lieu",
+  "plural_place_name": "Nom pluriel d'un lieu",
+  "weapon_or_object_name": "Nom d'arme ou objet",
+  "proto_celtic_radicals": "Radicaux proto-celtique",
+  "approximate_year": "Equivalent année approximative",
+  "50_words_at_most": "Description (une cinquantaine de mots au plus)",
+  "image_caption": "Légende de l'image (une vingtaine de mots au plus)",
+  "add": "Ajouter"
   }
   
