feat (types) delete config.js and complete locale and types.ts

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,68 +1,74 @@
 {
-    "breton": "breton",
-    "cornish": "cornique",
-    "english": "anglais",
-    "french": "français",
-    "gaulish": "gaulois",
-    "indo_european": "indo-européen",
-    "irish": "irlandais",
-    "old_irish": "vieil irlandais",
-    "scottish": "écossais",
-    "proto_celtic": "proto-celtique",
-    "welsh": "gallois",
-    "br": "br.",
-    "cor": "cor.",
-    "eng": "ang.",
-    "fr": "fr.",
-    "gal": "gau.",
-    "pr_IE": "pr.I.E.",
-    "ir": "irl.",
-    "old_ir": "v.irl.",
-    "sc": "eco.",
-    "pr_c": "pr.c.",
-    "wel_": "gal.",
-    "name": "nom",
-    "verb": "verbe",
-    "adjective": "adjectif",
-    "adverb": "adverbe",
-    "article": "article",
-    "pronoun": "pronom.",
-    "preposition": "préposition.",
-    "conjunction": "conjonction",
-    "affix": "affixe",
-    "name_abbr": "n.",
-    "verb_abbr": "vrb.",
-    "adjective_abbr": "adj.",
-    "adverb_abbr": "adv.",
-    "article_abbr": "art.",
-    "pronoun_abbr": "prn.",
-    "preposition_abbr": "prp.",
-    "conjunction_abbr": "cnj.",
-    "affix_abbr": "aff.",
-    "m_gender_abbr": "m.",
-    "f_gender_abbr": "f.",
-    "n_gender_abbr": "n.",
-    "no_gender_abbr": "",
-    "u_gender_abbr": "inc.",
-    "m_gender": "masculin",
-    "f_gender": "féminin",
-    "n_gender": "neutre",
-    "u_gender": "inconnu",
-    "no_gender": "",
-    "characters_places_and_demonym": "Personnages, lieux et gentilés celtiques",
-    "word_count": "Nombre de mots",
-    "word": "Mot",
-    "theme": "Thème lexical",
-    "period": "Période",
-    "place": "Lieu",
-    "country": "Pays",
-    "description": "Description",
-    "previous": "Précédent",
-    "page": "Page: ",
-    "next": "Suivant",
-    "add_name": "Ajouter un nom",
-      "literal_meaning": "Sens littéral",
-
+  "LB": "breton",
+  "LC": "cornique",
+  "LE": "anglais",
+  "LF": "français",
+  "LG": "gaulois",
+  "LIE": "indo-européen",
+  "LIR": "irlandais",
+  "LOI": "vieil irlandais",
+  "LS": "écossais",
+  "LPC": "proto-celtique",
+  "LW": "gallois",
+  "LBQ": "brittonique",
+  "LOB": "vieux breton",
+  "LLT": "latin",
+  "LB_abbr": "br.",
+  "LC_abbr": "cor.",
+  "LE_abbr": "ang.",
+  "LF_abbr": "fr.",
+  "LG_abbr": "gau.",
+  "LIE_abbr": "pr.I.E.",
+  "LIR_abbr": "irl.",
+  "LOI_abbr": "v.irl.",
+  "LS_abbr": "eco.",
+  "LPC_abbr": "pr.c.",
+  "LW_abbr": "gal.",
+  "LBQ_abbr": "brq.",
+  "LOB_abbr": "vx.br.",
+  "LLT_abbr": "lt.",
+  "name": "nom",
+  "verb": "verbe",
+  "WN": "nom",
+  "WV": "verbe",
+  "WADJ": "adjectif",
+  "WADV": "adverbe",
+  "WAF": "article",
+  "WPREP": "préposition",
+  "WCONJ": "conjonction",
+  "WPRON": "pronom",
+  "GM": "genre masculin",
+  "GF": "genre féminin",
+  "GN": "genre neutre",
+  "NO": "pas de genre",
+  "GU": "genre inconnu",
+  "WN_abbr": "n.",
+  "WV_abbr": "vrb.",
+  "WADJ_abbr": "adj.",
+  "WADV_abbr": "adv.",
+  "WAF_abbr": "art.",
+  "WPRON_abbr": "prn.",
+  "WPREP_abbr": "prp.",
+  "WCONJ_abbr": "cnj.",
+  "WAFF_abbr": "aff.",
+  "GM_abbr": "m.",
+  "GF_abbr": "f.",
+  "GN_abbr": "n.",
+  "NO_abbr": "",
+  "GU_abbr": "inc.",
+  "characters_places_and_demonym": "Personnages, lieux et gentilés celtiques",
+  "word_count": "Nombre de mots",
+  "word": "Mot",
+  "theme": "Thème lexical",
+  "period": "Période",
+  "place": "Lieu",
+  "country": "Pays",
+  "description": "Description",
+  "previous": "Précédent",
+  "page": "Page: ",
+  "next": "Suivant",
+  "add_name": "Ajouter un nom",
+  "literal_meaning": "Sens littéral",
   "etymological_form": "Forme étymologique",
   "propose_new_term": "Proposer un nouveau terme",
   "term": "Terme",
@@ -74,21 +80,25 @@
   "french_translation": "Traduction en français",
   "semantic_field": "Champ sémantique",
   "first_occurrence": "Première occurrence",
-  "reference_book": "Livre de référence",    "masculine": "Masculin",
+  "reference_book": "Livre de référence",
+  "masculine": "Masculin",
   "feminine": "Féminin",
   "neutral": "Neutre",
   "unknown": "Inconnu",
   "na": "N/A",
-  "noun": "Nom",  "grammatical_nature": "Nature grammaticale",
+  "noun": "Nom",
+  "grammatical_nature": "Nature grammaticale",
   "associated_language": "Langue associée",
   "details": "Détails",
-  "sources": "Sources",  "title": "Gerdarzh",
+  "sources": "Sources",
+  "title": "Gerdarzh",
   "home": "Accueil",
   "game": "Jeu Gerdarzh",
   "lexicon": "Lexique",
   "entities": "Entités",
   "profile": "Profil",
-  "contact": "Contact",  "propose_new_proper_noun": "Proposer un nouveau nom propre",
+  "contact": "Contact",
+  "propose_new_proper_noun": "Proposer un nouveau nom propre",
   "entity_name": "Nom de l'entité",
   "literal_translation_fr": "Traduction littérale",
   "literal_translation_eng": "Traduction littérale anglaise",
@@ -117,6 +127,6 @@
   "approximate_year": "Equivalent année approximative",
   "50_words_at_most": "Description (une cinquantaine de mots au plus)",
   "image_caption": "Légende de l'image (une vingtaine de mots au plus)",
-  "add": "Ajouter"
-  }
-  
+  "add": "Ajouter",
+  "welcome_gerdarzh": "Bienvenue sur Gerdarzh"
+}
