feat (ui) organize WordstemArticle structure

--- a/src/locales/br.json
+++ b/src/locales/br.json
@@ -1,55 +1,55 @@
 {
-    "breton": "brezhoneg",
-    "cornish": "kerneveureg",
-    "english": "saozneg",
-    "french": "galleg",
-    "gaulish": "galianeg",
-    "indo_european": "indezeuropeg",
-    "irish": "iwerzhoneg",
-    "old_irish": "heniwerzhoneg.",
-    "scottish": "skoseg",
-    "proto_celtic": "kent-keltiek",
-    "welsh": "kembraeg",
-    "br": "br.",
-    "cor": "ker.",
-    "eng": "sa.",
-    "fr": "gal.",
-    "gal": "gau.",
-    "pr_IE": "k.I.E.",
-    "ir": "iw.",
-    "old_ir": "h.iw.",
-    "sc": "sko.",
-    "pr_c": "kt.k.",
-    "wel_": "kem.",
-    "name": "anv",
-    "verb": "verb",
-    "adjective": "anv-gwan",
-    "adverb": "ragverb",
-    "article": "doareenn",
-    "pronoun": "raganv",
-    "preposition": "araogenn.",
-    "conjunction": "stagell",
-    "affix": "lostger",
-    "name_abbr": "an.",
-    "verb_abbr": "vrb.",
-    "adjective_abbr": "a.-gw.",
-    "adverb_abbr": "rgv.",
-    "article_abbr": "doa.",
-    "pronoun_abbr": "rag.",
-    "preposition_abbr": "ara.",
-    "conjunction_abbr": "stg.",
-    "affix_abbr": "lst",
-    "m_gender_abbr": "g.",
-    "f_gender_abbr": "b.",
-    "n_gender_abbr": "n.",
-    "no_gender_abbr": "",
-    "u_gender_abbr": "dia.",
-    "m_gender": "gourel",
-    "f_gender": "benel",
-    "n_gender": "neptu",
-    "u_gender": "dianav",
-    "no_gender": "",
-    "characters_places_and_demonym": "Denion, lec'hioù ha gentilioù keltiek",
+  "breton": "brezhoneg",
+  "cornish": "kerneveureg",
+  "english": "Saozneg",
+  "french": "Galleg",
+  "gaulish": "galianeg",
+  "indo_european": "indezeuropeg",
+  "irish": "iwerzhoneg",
+  "old_irish": "heniwerzhoneg.",
+  "scottish": "skoseg",
+  "proto_celtic": "kent-keltiek",
+  "welsh": "kembraeg",
+  "br": "br.",
+  "cor": "ker.",
+  "eng": "sa.",
+  "fr": "gal.",
+  "gal": "gau.",
+  "pr_IE": "k.I.E.",
+  "ir": "iw.",
+  "old_ir": "h.iw.",
+  "sc": "sko.",
+  "pr_c": "kt.k.",
+  "wel_": "kem.",
+  "name": "anv",
+  "verb": "verb",
+  "adjective": "anv-gwan",
+  "adverb": "ragverb",
+  "article": "doareenn",
+  "pronoun": "raganv",
+  "preposition": "araogenn.",
+  "conjunction": "stagell",
+  "affix": "lostger",
+  "name_abbr": "an.",
+  "verb_abbr": "vrb.",
+  "adjective_abbr": "a.-gw.",
+  "adverb_abbr": "rgv.",
+  "article_abbr": "doa.",
+  "pronoun_abbr": "rag.",
+  "preposition_abbr": "ara.",
+  "conjunction_abbr": "stg.",
+  "affix_abbr": "lst",
+  "m_gender_abbr": "g.",
+  "f_gender_abbr": "b.",
+  "n_gender_abbr": "n.",
+  "no_gender_abbr": "",
+  "u_gender_abbr": "dia.",
+  "m_gender": "gourel",
+  "f_gender": "benel",
+  "n_gender": "neptu",
+  "u_gender": "dianav",
+  "no_gender": "",
+  "characters_places_and_demonym": "Denion, lec'hioù ha gentilioù keltiek",
   "word_count": "Niver a c'herioù",
   "word": "Ger",
   "lexical_theme": "Dodenn c'heriadel",
@@ -60,7 +60,7 @@
   "previous": "War-gil",
   "page": "pajenn: ",
   "next": "War-raok",
-  "add_name": "Ouzhpennañ un anv",  
+  "add_name": "Ouzhpennañ un anv",
   "literal_meaning": "Ster lennegel",
   "etymological_form": "Stumm gerdarzhel",
   "propose_new_term": "Kinnig un termen nevez",
@@ -79,10 +79,12 @@
   "neutral": "Neptu",
   "unknown": "Dianav",
   "na": "N/A",
-  "noun": "Anv",  "grammatical_nature": "Doare yezhadurel",
+  "noun": "Anv",
+  "grammatical_nature": "Doare yezhadurel",
   "associated_language": "Yezh liammet",
   "details": "Munudoù",
-  "sources": "Andon",  "title": "Gerdarzh",
+  "sources": "Andon",
+  "title": "Gerdarzh",
   "home": "Degemer",
   "game": "C'hoari Gerdarzh",
   "lexicon": "Geriadur",
@@ -118,5 +120,4 @@
   "50_words_at_most": "50 ger d'ar muañ",
   "image_caption": "Alc'hwez ar skeudenn",
   "add": "Ouzhpennañ"
-  }
-  
+}
