--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -29,7 +29,7 @@
   "LLT_abbr": "lt.",
   "name": "nom",
   "verb": "verbe",
-  "WN": "nom",
+  "WN": "Nom commun",
   "WV": "verbe",
   "WADJ": "adjectif",
   "WADV": "adverbe",
@@ -37,11 +37,11 @@
   "WPREP": "préposition",
   "WCONJ": "conjonction",
   "WPRON": "pronom",
-  "GM": "genre masculin",
-  "GF": "genre féminin",
-  "GN": "genre neutre",
+  "GM": "masculin",
+  "GF": "féminin",
+  "GN": "neutre",
   "NO": "pas de genre",
-  "GU": "genre inconnu",
+  "GU": "(genre inconnu)",
   "WN_abbr": "n.",
   "WV_abbr": "vrb.",
   "WADJ_abbr": "adj.",
@@ -74,9 +74,11 @@
   "term": "Terme",
   "language_of_word": "Langue du mot",
   "phonetic": "Phonétique",
+  "pronunciation": "Prononciation",
   "gender": "Genre",
   "word_class": "Classe du mot",
   "english_translation": "Traduction en anglais",
+  "translations": "Traductions",
   "french_translation": "Traduction en français",
   "semantic_field": "Champ sémantique",
   "first_occurrence": "Première occurrence",
@@ -86,7 +88,7 @@
   "neutral": "Neutre",
   "unknown": "Inconnu",
   "na": "N/A",
-  "noun": "Nom",
+  "noun": "Nom commun",
   "grammatical_nature": "Nature grammaticale",
   "associated_language": "Langue associée",
   "details": "Détails",
@@ -128,5 +130,8 @@
   "50_words_at_most": "Description (une cinquantaine de mots au plus)",
   "image_caption": "Légende de l'image (une vingtaine de mots au plus)",
   "add": "Ajouter",
-  "welcome_gerdarzh": "Bienvenue sur Gerdarzh"
+  "welcome_gerdarzh": "Bienvenue sur Gerdarzh",
+  "french": "Français",
+  "english": "Anglais",
+  "etymological_links": "Liens étymologiques"
 }
