--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,66 +1,67 @@
 {
-    "breton": "breton",
-    "cornish": "cornish",
-    "english": "english",
-    "french": "french",
-    "gaulish": "gaulish",
-    "indo_european": "indo-european",
-    "irish": "irish",
-    "old_irish": "old irish.",
-    "scottish": "scottish",
-    "proto_celtic": "proto-celtic",
-    "welsh": "welsh",
-    "br": "br.",
-    "cor": "cor.",
-    "eng": "eng.",
-    "fr": "fr.",
-    "gal": "gal.",
-    "pr_IE": "pr.I.E.",
-    "ir": "ir.",
-    "old_ir": "old.ir.",
-    "sc": "sc.",
-    "pr_c": "pr.c.",
-    "wel_": "wel.",
-    "name": "name",
-    "verb": "verb",
-    "adjective": "adjective",
-    "adverb": "adverb",
-    "article": "article",
-    "pronoun": "pronoun",
-    "preposition": "preposition",
-    "conjunction": "conjunction",
-    "affix": "affix",
-    "name_abbr": "n.",
-    "verb_abbr": "vrb.",
-    "adjective_abbr": "adj.",
-    "adverb_abbr": "adv.",
-    "article_abbr": "art.",
-    "pronoun_abbr": "prn.",
-    "preposition_abbr": "prp.",
-    "conjunction_abbr": "cnj.",
-    "affix_abbr": "aff.",
-    "m_gender_abbr": "m.",
-    "f_gender_abbr": "f.",
-    "n_gender_abbr": "n.",
-    "no_gender_abbr": "",
-    "u_gender_abbr": "un.",
-    "m_gender": "male",
-    "f_gender": "feminine",
-    "n_gender": "neutral",
-    "u_gender": "unknow",
-    "no_gender": "",
-    "characters_places_and_demonym": "Celtic Characters, Places, and Demonyms",
-    "word_count": "Word count: ",
-    "word": "Word",
-    "theme": "Lexical theme",
-    "period": "Period",
-    "place": "Place",
-    "country": "Country",
-    "description": "Description",
-    "previous": "Previous",
-    "page": "Page: ",
-    "next": "Next",
-    "add_name": "Add a name","literal_meaning": "Literal meaning",
+  "breton": "breton",
+  "cornish": "cornish",
+  "english": "English",
+  "french": "French",
+  "gaulish": "gaulish",
+  "indo_european": "indo-european",
+  "irish": "irish",
+  "old_irish": "old irish.",
+  "scottish": "scottish",
+  "proto_celtic": "proto-celtic",
+  "welsh": "welsh",
+  "br": "br.",
+  "cor": "cor.",
+  "eng": "eng.",
+  "fr": "fr.",
+  "gal": "gal.",
+  "pr_IE": "pr.I.E.",
+  "ir": "ir.",
+  "old_ir": "old.ir.",
+  "sc": "sc.",
+  "pr_c": "pr.c.",
+  "wel_": "wel.",
+  "name": "name",
+  "verb": "verb",
+  "adjective": "adjective",
+  "adverb": "adverb",
+  "article": "article",
+  "pronoun": "pronoun",
+  "preposition": "preposition",
+  "conjunction": "conjunction",
+  "affix": "affix",
+  "name_abbr": "n.",
+  "verb_abbr": "vrb.",
+  "adjective_abbr": "adj.",
+  "adverb_abbr": "adv.",
+  "article_abbr": "art.",
+  "pronoun_abbr": "prn.",
+  "preposition_abbr": "prp.",
+  "conjunction_abbr": "cnj.",
+  "affix_abbr": "aff.",
+  "m_gender_abbr": "m.",
+  "f_gender_abbr": "f.",
+  "n_gender_abbr": "n.",
+  "no_gender_abbr": "",
+  "u_gender_abbr": "un.",
+  "m_gender": "male",
+  "f_gender": "feminine",
+  "n_gender": "neutral",
+  "u_gender": "unknow",
+  "no_gender": "",
+  "characters_places_and_demonym": "Celtic Characters, Places, and Demonyms",
+  "word_count": "Word count: ",
+  "word": "Word",
+  "theme": "Lexical theme",
+  "period": "Period",
+  "place": "Place",
+  "country": "Country",
+  "description": "Description",
+  "previous": "Previous",
+  "page": "Page: ",
+  "next": "Next",
+  "add_name": "Add a name",
+  "literal_meaning": "Literal meaning",
   "etymological_form": "Etymological form",
   "propose_new_term": "Propose a new term",
   "term": "Term",
@@ -72,21 +73,25 @@
   "french_translation": "French translation",
   "semantic_field": "Semantic field",
   "first_occurrence": "First occurrence",
-  "reference_book": "Reference book",  "masculine": "Masculine",
+  "reference_book": "Reference book",
+  "masculine": "Masculine",
   "feminine": "Feminine",
   "neutral": "Neutral",
   "unknown": "Unknown",
   "na": "N/A",
-  "noun": "Noun",  "grammatical_nature": "Grammatical Nature",
+  "noun": "Noun",
+  "grammatical_nature": "Grammatical Nature",
   "associated_language": "Associated Language",
   "details": "Details",
-  "sources": "Sources",  "title": "Gerdarzh",
+  "sources": "Sources",
+  "title": "Gerdarzh",
   "home": "Home",
   "game": "Gerdarzh Game",
   "lexicon": "Lexicon",
   "entities": "Entities",
   "profile": "Profile",
-  "contact": "Contact",  "propose_new_proper_noun": "Propose a new proper noun",
+  "contact": "Contact",
+  "propose_new_proper_noun": "Propose a new proper noun",
   "entity_name": "Entity Name",
   "literal_translation_fr": "Literal Translation (French)",
   "literal_translation_eng": "Literal Translation (English)",
@@ -115,5 +120,6 @@
   "approximate_year": "Approximate Year Equivalent",
   "50_words_at_most": "Description (around fifty words max)",
   "image_caption": "Image Caption (around twenty words max)",
-  "add": "Add"
-  }
+  "add": "Add",
+  "etymological_links": "etymological links"
+}
