feat (locale) complete locales i18n files

--- a/src/locales/br.json
+++ b/src/locales/br.json
@@ -119,5 +119,6 @@
   "approximate_year": "mare",
   "50_words_at_most": "50 ger d'ar muañ",
   "image_caption": "Alc'hwez ar skeudenn",
-  "add": "Ouzhpennañ"
+  "add": "Ouzhpennañ",
+  "etymology": "gerdarzh"
 }
