--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -121,5 +121,6 @@
   "50_words_at_most": "Description (around fifty words max)",
   "image_caption": "Image Caption (around twenty words max)",
   "add": "Add",
-  "etymological_links": "etymological links"
+  "etymological_links": "etymological links",
+  "etymology": "etymology"
 }
