--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -133,5 +133,6 @@
   "welcome_gerdarzh": "Bienvenue sur Gerdarzh",
   "french": "Français",
   "english": "Anglais",
-  "etymological_links": "Liens étymologiques"
+  "etymological_links": "Liens étymologiques",
+  "etymology": "étymologie"
 }
