feat (locales) add new entries

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -134,5 +134,33 @@
   "french": "Français",
   "english": "Anglais",
   "etymological_links": "Liens étymologiques",
-  "etymology": "étymologie"
+  "etymology": "étymologie",
+  "notice_button": "Consulter la notice du jeu\n▼",
+  "notice_intro": "Le jeu consiste en une série de 10 questions aléatoirement sélectionnées en fonction d'un thème lexical choisi:",
+  "places": "💒 Lieux et Pays",
+  "family_names": "📜 Noms de famille Bretons",
+  "historic_figures": "👑 Figures Historiques",
+  "mythic_figures": "⚡ Figures Mythiques",
+  "tribes": "🍀 Peuples et Tribus",
+  "weapons_creatures": "⚔️ Armes et Créatures",
+  "places_description": "Regroupant les termes toponymiques d'origine gauloise, bretonne ou britannique.",
+  "family_names_description": "Regroupant les patronymes actuels d'origine bretonne.",
+  "historic_figures_description": "Regroupant des personnages connus de l'histoire du monde celte.",
+  "mythic_figures_description": "Regroupant des dieux ou héros légendaires issus des épopées irlandaises, bretonnes ou du panthéon gaulois.",
+  "tribes_description": "Regroupant des gentilés gaulois et noms de clans irlandais, écossais.",
+  "weapons_creatures_description": "Regroupant des noms donnés à des armes légendaires et des créatures du folklore celtique.",
+  "game_instruction_1": "Tous les noms présentés étant d'origine celtique, votre mission est de deviner le sens littéral du nom et de choisir la bonne réponse parmi cinq propositions.",
+  "game_instruction_2": "Les radicaux composant le nom sont affichés comme aide. Vous pouvez voir la traduction correspondante en cliquant sur le radical correspondant.",
+  "game_instruction_3": "Bonne chance !",
+  "lexical_theme_choice": "Choisissez un thème lexical:",
+  "cultural_theme_choice": "Choisissez un thème culturel (à venir)",
+  "gauls": "Gaules",
+  "ireland_scotland": "Irlande et Écosse",
+  "britain": "Grande et petite Bretagne",
+  "all": "Tous",
+  "validate_button": "Valider",
+  "clue": "Indice",
+  "radicals_for_name": "Radicaux composant le nom",
+  "validate": "Valider",
+  "back-to-menu": "Retourner au menu"
 }
