fix (locales) delete emoticones

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -137,12 +137,12 @@
   "etymology": "étymologie",
   "notice_button": "Consulter la notice du jeu\n▼",
   "notice_intro": "Le jeu consiste en une série de 10 questions aléatoirement sélectionnées en fonction d'un thème lexical choisi:",
-  "places": "💒 Lieux et Pays",
-  "family_names": "📜 Noms de famille Bretons",
-  "historic_figures": "👑 Figures Historiques",
-  "mythic_figures": "⚡ Figures Mythiques",
-  "tribes": "🍀 Peuples et Tribus",
-  "weapons_creatures": "⚔️ Armes et Créatures",
+  "places": "Lieux et Pays",
+  "family_names": "Noms de famille Bretons",
+  "historic_figures": "Figures Historiques",
+  "mythic_figures": "Figures Mythiques",
+  "tribes": "Peuples et Tribus",
+  "weapons_creatures": "Armes et Créatures",
   "places_description": "Regroupant les termes toponymiques d'origine gauloise, bretonne ou britannique.",
   "family_names_description": "Regroupant les patronymes actuels d'origine bretonne.",
   "historic_figures_description": "Regroupant des personnages connus de l'histoire du monde celte.",
