fix (ui) edit key name

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -158,7 +158,7 @@
   "ireland_scotland": "Irlande et Écosse",
   "britain": "Grande et petite Bretagne",
   "all": "Tous",
-  "validate_button": "Valider",
+  "validat": "Valider",
   "clue": "Indice",
   "radicals_for_name": "Radicaux composant le nom",
   "validate": "Valider",
