feat (locales) add new entries

--- a/src/locales/br.json
+++ b/src/locales/br.json
@@ -120,5 +120,6 @@
   "50_words_at_most": "50 ger d'ar muañ",
   "image_caption": "Alc'hwez ar skeudenn",
   "add": "Ouzhpennañ",
-  "etymology": "gerdarzh"
+  "etymology": "gerdarzh",
+  "radicals": "Gwriziennoù hengeltiek"
 }
