--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -172,5 +172,6 @@
   "occurence_year": "Année d'occurence",
   "parents_wordstems": "Mots parents",
   "children_wordstems": "Mots enfant",
-  "send": "Envoyer"
+  "send": "Envoyer",
+  "radicals": "Radicaux vieux-celtique"
 }
