feat (locale) add new entries

--- a/src/locales/br.json
+++ b/src/locales/br.json
@@ -121,5 +121,6 @@
   "image_caption": "Alc'hwez ar skeudenn",
   "add": "Ouzhpennañ",
   "etymology": "gerdarzh",
-  "radicals": "Gwriziennoù hengeltiek"
+  "radicals": "Gwriziennoù hengeltiek",
+  "search": "Klask un termen"
 }
