--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -124,5 +124,6 @@
   "etymological_links": "etymological links",
   "etymology": "etymology",
   "children_wordstems": "Children's wordstems",
-  "parents_wordstems": "Parent's wordtems"
+  "parents_wordstems": "Parent's wordtems",
+  "search": "Searching a term"
 }
