--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -173,5 +173,6 @@
   "parents_wordstems": "Mots parents",
   "children_wordstems": "Mots enfant",
   "send": "Envoyer",
-  "radicals": "Radicaux vieux-celtique"
+  "radicals": "Radicaux vieux-celtique",
+  "search": "Rechercher un  terme"
 }
